add: swagger insert
