# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /
 definitions:
-  model.Developer:
+  controller.Developer:
     properties:
       _id:
         example: "123456789"
@@ -12,7 +12,7 @@ definitions:
         example: HoYoverse
         type: string
     type: object
-  model.Games:
+  controller.Games:
     properties:
       _id:
         example: "123456789"
@@ -21,7 +21,7 @@ definitions:
         example: A tactical first-person shooter game developed by Riot Games
         type: string
       dev_name:
-        $ref: '#/definitions/model.Developer'
+        $ref: '#/definitions/controller.Developer'
       game_banner:
         example: https://i.ibb.co.com/k1KdV7t/genshin-main-banner.png
         type: string
@@ -53,6 +53,49 @@ definitions:
         format: date-time
         type: string
     type: object
+  controller.ReqDeveloper:
+    properties:
+      bio:
+        example: tech otaku save the world
+        type: string
+      name:
+        example: HoYoverse
+        type: string
+    type: object
+  controller.ReqGames:
+    properties:
+      desc:
+        example: A tactical first-person shooter game developed by Riot Games
+        type: string
+      dev_name:
+        $ref: '#/definitions/controller.ReqDeveloper'
+      game_banner:
+        example: https://i.ibb.co.com/k1KdV7t/genshin-main-banner.png
+        type: string
+      game_logo:
+        example: https://i.ibb.co.com/Z6xFZP6/genshin-logo.png
+        type: string
+      genre:
+        example:
+        - Adventure Games
+        - Shooter
+        - Action
+        items:
+          type: string
+        type: array
+      link_games:
+        example: https://genshin.hoyoverse.com/id/
+        type: string
+      name:
+        example: Valorant
+        type: string
+      preview:
+        example: https://www.youtube.com/watch?v=qqnEjmnitgc
+        type: string
+      rating:
+        example: 123.12
+        type: number
+    type: object
 host: zenversegames-ba223a40f69e.herokuapp.com
 info:
   contact:
@@ -74,7 +117,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.Games'
+            $ref: '#/definitions/controller.Games'
       summary: Get All Data Games.
       tags:
       - Games
@@ -82,7 +125,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Ambil per ID data presensi.
+      description: Ambil per ID data games.
       parameters:
       - description: Masukan ID
         in: path
@@ -95,7 +138,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.Games'
+            $ref: '#/definitions/controller.Games'
         "400":
           description: Bad Request
         "404":
@@ -103,6 +146,32 @@ paths:
         "500":
           description: Internal Server Error
       summary: Get By ID Data Games.
+      tags:
+      - Games
+  /insert:
+    post:
+      consumes:
+      - application/json
+      description: Input data games.
+      parameters:
+      - description: Payload Body [RAW]
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/controller.ReqGames'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.Games'
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Insert data Games.
       tags:
       - Games
 schemes:
